--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dotenv": "^8.2.0",
     "inquirer": "^8.0.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "seed-js": "0.0.11",
     "sequelize": "^6.5.1"
   }
 }
